# G4Hunter-Companion

./: .gitignore  LICENSE  MANIFEST.in  README.md  create_design.py  design.csv  pyproject.toml  requirements.txt  submit_snake.sh
scripts/: cluster.yaml  config.yaml  download_genomes.sh  ftp_links.txt  g4_snake.smk  pg4_extraction.py  submit_snake.sh
src/g4hunter/: __init__.py  cli.py
