[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "g4hunter"
version = "2.0.0"
authors = [
    {name = "Nikol Chantzi", email = "nicolechantzi@gmail.com"},
]
description = "G4Hunter - Extract G-quadruplex forming sequences from DNA using sliding window scoring"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["bioinformatics", "g-quadruplex", "dna", "genomics", "sequence-analysis"]
dependencies = [
    "attrs>=23.0.0",
    "biopython>=1.80",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pybedtools>=0.9.0",
    "termcolor>=1.1.0",
    "pathlib2;python_version<'3.4'",
]

[project.optional-dependencies]
analysis = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
    "tqdm>=4.60.0",
]

[project.urls]
Homepage = "https://github.com/Georgakopoulos-Soares-lab/G4Hunter-Companion"
Documentation = "https://github.com/Georgakopoulos-Soares-lab/G4Hunter-Companion#readme"
Repository = "https://github.com/Georgakopoulos-Soares-lab/G4Hunter-Companion.git"
"Bug Tracker" = "https://github.com/Georgakopoulos-Soares-lab/G4Hunter-Companion/issues"

[project.scripts]
g4hunter = "g4hunter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["g4hunter*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''