[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "g4hunter"
version = "2.0.0"
authors = [
    {name = "Nikol Chantzi", email = "nicolechantzi@gmail.com"},
]
description = "G4Hunter - Extract G-quadruplex forming sequences from DNA using sliding window scoring"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["bioinformatics", "g-quadruplex", "dna", "genomics", "sequence-analysis"]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "pre-commit>=2.0",
]
analysis = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0", 
    "jupyter>=1.0.0",
    "tqdm>=4.60.0",
]
# Install all requirements from requirements.txt (includes snakemake and other tools)
full = [
    "amply>=0.1.6",
    "appdirs>=1.4.4", 
    "attrs>=25.3.0",
    "biopython>=1.85",
    "certifi>=2025.6.15",
    "charset-normalizer>=3.4.2",
    "ConfigArgParse>=1.7.1",
    "connection_pool>=0.0.3",
    "datrie>=0.8.2",
    "docutils>=0.21.2",
    "dpath>=2.2.0",
    "fastjsonschema>=2.21.1", 
    "filelock>=3.18.0",
    "gitdb>=4.0.12",
    "GitPython>=3.1.44",
    "humanfriendly>=10.0",
    "idna>=3.10",
    "Jinja2>=3.1.6",
    "jsonschema>=4.24.0",
    "jsonschema-specifications>=2025.4.1",
    "jupyter_core>=5.8.1",
    "MarkupSafe>=3.0.2",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "packaging>=25.0",
    "pandas>=2.3.0",
    "pathlib>=1.0.1",
    "plac>=1.4.5",
    "platformdirs>=4.3.8",
    "psutil>=7.0.0",
    "PuLP>=2.3",
    "pybedtools>=0.12.0",
    "pyparsing>=3.2.3",
    "pysam>=0.23.3",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "PyYAML>=6.0.2",
    "ratelimiter>=1.2.0",
    "referencing>=0.36.2",
    "requests>=2.32.4",
    "reretry>=0.11.8",
    "rpds-py>=0.25.1",
    "scipy>=1.15.3",
    "six>=1.17.0",
    "smart-open>=7.1.0",
    "smmap>=5.0.2",
    "snakemake>=7.18.0",
    "stopit>=1.1.2",
    "tabulate>=0.9.0",
    "termcolor>=3.1.0",
    "throttler>=1.2.2",
    "toposort>=1.10",
    "traitlets>=5.14.3",
    "typing_extensions>=4.14.0",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "wrapt>=1.17.2",
    "yte>=1.8.1",
]

[project.urls]
Homepage = "https://github.com/Georgakopoulos-Soares-lab/G4Hunter-Companion"
Documentation = "https://github.com/Georgakopoulos-Soares-lab/G4Hunter-Companion#readme"
Repository = "https://github.com/Georgakopoulos-Soares-lab/G4Hunter-Companion.git"
"Bug Tracker" = "https://github.com/Georgakopoulos-Soares-lab/G4Hunter-Companion/issues"

[project.scripts]
g4hunter = "g4hunter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["g4hunter*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}